Make sure images aren't too big

--- a/friendscleveland/memorial.css
+++ b/friendscleveland/memorial.css
@@ -32,6 +32,8 @@ p {
 
 p img {
     border-radius: 10px;
+    max-width: 100%;
+    height: auto;
 }
 
 .sidebar-form {
